--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -63,6 +63,15 @@ h6 {
   }
 }
 
+.link_grn_underline {
+  color: #4abeb6 !important;
+  text-decoration: underline !important;
+  &:hover {
+    color: #4abeb6 !important;
+    text-decoration: underline !important;
+  }
+}
+
 a {
   text-decoration: none;
   -o-transition: 0.5s;
