--- a/app/views/categories/dashboard.html.erb
+++ b/app/views/categories/dashboard.html.erb
@@ -30,11 +30,13 @@
 					<div class="chart-card d-inline-flex card" style="width: 49%;">
 						<div class="card-body">
 							<div id="chartContainer1" style="height: 300px; width: 100%;"></div>
+							<a class="text-align-center mt-2" href="/categories/<%= @category.slug %>"><p class="mb-0 text-white bg-dark text-center">View Published Articles</p></a>
 						</div>
 					</div>
 					<div class="chart-card d-inline-flex card" style="width: 49%;">
 						<div class="card-body">
 							<div id="chartContainer2" style="height: 300px; width: 100%;"></div>
+							<a class="text-align-center mt-2" href="/newsletters"><p class="mb-0 text-white bg-dark text-center">View Newsletters Sent</p></a>
 						</div>
 					</div>
 				</div>
@@ -85,6 +87,10 @@
 			  	<div class="list-group-item">
 					<svg xmlns="http://www.w3.org/2000/svg" width="15px" height="15px" viewBox="0 0 512 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M256 16a240 240 0 1 1 0 480 240 240 0 1 1 0-480zm0 496A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM357.7 197.7c3.1-3.1 3.1-8.2 0-11.3s-8.2-3.1-11.3 0L224 308.7l-58.3-58.3c-3.1-3.1-8.2-3.1-11.3 0s-3.1 8.2 0 11.3l64 64c3.1 3.1 8.2 3.1 11.3 0l128-128z"/></svg>
 					<%= link_to "Manage interview requests", '/interviews', class: "link_nrml" %>
+				</div>
+				<div class="list-group-item">
+					<svg xmlns="http://www.w3.org/2000/svg" width="15px" height="15px" viewBox="0 0 512 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path d="M256 16a240 240 0 1 1 0 480 240 240 0 1 1 0-480zm0 496A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM357.7 197.7c3.1-3.1 3.1-8.2 0-11.3s-8.2-3.1-11.3 0L224 308.7l-58.3-58.3c-3.1-3.1-8.2-3.1-11.3 0s-3.1 8.2 0 11.3l64 64c3.1 3.1 8.2 3.1 11.3 0l128-128z"/></svg>
+					<%= link_to "Create new interview request", '/interviews/new', class: "link_nrml" %>
 				</div>
 			  <% else %>
 				<div class="list-group-item">
