--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,6 +1,11 @@
 <div class="category">
   <div class="category_image" style="background-image: url(<%= url_for(@category.image.variant(resize_to_fill: [1200, 845], format: 'webp')) %>)">
-    <h1><%= @category.name %></h1>
+    <div class="category_name_background p-4">
+      <h1><%= @category.name %></h1>
+      <% if current_user && current_user.admin? || (current_user.categories.where(slug: @category.slug).present?) %>
+        <%= link_to "Category dashboard (admin only)", "/categories/#{@category.slug}/dashboard", class: "link_nrml" %>
+      <% end %>
+    </div>
   </div>
   <div class="category--show">
     <div class="other--articles">
@@ -30,7 +35,9 @@
                     <span><%= date_to_words(post.publish_at) %></span>
                   </div>
                 </div>
-                <p class="date_post_preview mb-0"><%= post.category.name %></p>
+                <p class="date_post_preview mb-0">
+                  <%= post.category.name %>
+                </p>
                 <%= render 'posts/partials/views_and_comments', post: post %>
               </div>
             </div>
