--- a/app/views/pitches/_form.html.erb
+++ b/app/views/pitches/_form.html.erb
@@ -26,14 +26,14 @@
       <% @prompt = current_user.editor? ? "Select a Deadline" : "Set a deadline (Optional)" %>
       <% if @pitch.is_interview? %>
         <p>How many followers does you/your client have?
-          <%= f.select(:following_level, ['less than 25k', 'between 25k and 100k', 'between 100k and 500k', 'between 500k and 1 million', 'over 1 million'], {prompt: "None selected"}) %></p>
+          <%= f.select(:following_level, ['less than 100k', 'between 100k and 500k', 'between 500k and 1 million', 'over 1 million'], {prompt: "None selected"}) %></p>
         <p>What description fits you/your client the best?
           <%= f.select(:interview_kind, ['Actor', 'Actress', 'Author', 'Artist', 'Activist', 'Content Creator', 'Influencer', 'Musician', 'Youtuber', 'Other'], {prompt: "None selected"}) %>
         </p>
         <p>
           Please indicate the social media platform you can share the article link. (You will get to see the draft before it's published.)
         </p>
-        <%= f.select(:platform_to_share, ['None selected', 'Instagram story w/ link (preferred)', 'Instagram post (preferred)', 'TikTok video', 'Youtube video description (top)', 'Twitter tweet'], {prompt: "None selected"}) %>
+        <%= f.select(:platform_to_share, ['Instagram story w/ link (preferred)', 'Instagram post description', 'Youtube shoutout', 'Twitter tweet', 'Pinterest post', 'LinkedIn post'], {prompt: "None selected"}) %>
         <p>Admin notes about this pitch</p>
         <%= f.text_area :admin_notes, placeholder: "No notes" %>
         <%= f.select(:deadline, options_for_select(["6 weeks", "8 weeks"], [6, 8]), {prompt: @prompt}, {:class => "d-inline"}) %>
@@ -42,10 +42,11 @@
       <% end %>
       <a data-toggle="tooltip" title="Read about deadlines" class="ml-1 link_grn" target="_blank" href="/writing-the-perfect-article#deadlines-and-extensions"><svg width="18px" height="18px" aria-hidden="true" focusable="false" data-prefix="fad" data-icon="info-circle" class="mb-1 svg-inline--fa fa-info-circle fa-w-16" role="img" viewBox="0 0 512 512"><g class="fa-group"><path class="fa-secondary" fill="currentColor" d="M256 8C119 8 8 119.08 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 110a42 42 0 1 1-42 42 42 42 0 0 1 42-42zm56 254a12 12 0 0 1-12 12h-88a12 12 0 0 1-12-12v-24a12 12 0 0 1 12-12h12v-64h-12a12 12 0 0 1-12-12v-24a12 12 0 0 1 12-12h64a12 12 0 0 1 12 12v100h12a12 12 0 0 1 12 12z" opacity="0.4"></path><path class="fa-primary" fill="currentColor" d="M256 202a42 42 0 1 0-42-42 42 42 0 0 0 42 42zm44 134h-12V236a12 12 0 0 0-12-12h-64a12 12 0 0 0-12 12v24a12 12 0 0 0 12 12h12v64h-12a12 12 0 0 0-12 12v24a12 12 0 0 0 12 12h88a12 12 0 0 0 12-12v-24a12 12 0 0 0-12-12z"></path></g></svg></a>
     </div>
-    <p>Priority (select <b>High</b> for SEO pitches and high-priority topics)</p>
-    <div class="margin_flds mt-0">
-      <%= f.select(:priority, ["None", "High"], {prompt: "None"}, {:class => "d-inline"}) %>
-    </div>
+    <% if current_user && current_user.is_manager? %>
+      <p>Priority (select <b>High</b> for SEO pitches and high-priority topics)
+        <%= f.select(:priority, ["None", "High"], {prompt: "None"}, {:class => "d-inline"}) %>
+      </p>
+    <% end %>
     <% if !@pitch.is_interview? %>
       <% if @pitch.thumbnail.attached? %>
         <%= image_tag(@pitch.thumbnail.variant(resize_to_fill: [540,380], format: 'webp'), alt: @pitch.title, :class => "card-img-top")%>
