--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -19,8 +19,8 @@
     <%= f.hidden_field :submitted_profile, value: true %>
   <% end %>
 
-  <% if current_user.admin? && @user.editor && !@user.admin %>
-    <%= f.label "Skip assignment", :class => "ml-2" %>
+  <% if current_user && current_user.is_manager? && @user.editor && !@user.admin %>
+    <%= f.label "Skip editor assignment", :class => "ml-2" %>
     <%= f.check_box :skip_assignment %>
   <% end %>
 
@@ -88,8 +88,8 @@
       <%= f.check_box :admin %><br />
     <% end %>
     <br>
-    <% if current_user && current_user.admin? %>
-      <%= f.label "Marketer" %>
+    <% if current_user && current_user.is_interviewer_manager? %>
+      <%= f.label "Interviewer" %>
       <%= f.check_box :marketer %><br />
     <% end %>
     <br>
