created new script to optimize paragraph length

--- a/app/assets/stylesheets/_posts_projects.css.scss
+++ b/app/assets/stylesheets/_posts_projects.css.scss
@@ -371,6 +371,8 @@
   .post_content {
     p {
       font-size: 19px !important;
+      line-height: 1.75em !important;
+      margin-bottom: 1.67em 0 !important;
     }
     br {
       display: none;
