added subscriber category relationship

--- a/app/views/application_mailer/new_badge_earned.html.erb
+++ b/app/views/application_mailer/new_badge_earned.html.erb
@@ -13,6 +13,6 @@
     <img style="display: block; max-width: 100%; width: 400px; margin: 0 auto;" src=<%= images[rand(0..2)] %>>
     <p>To claim your badge, please log into your writer profile <a href="https://www.theteenmagazine.com/login" style="color: #4ABEB6;">here</a>. If you have trouble logging in, you can <a href="https://www.theteenmagazine.com/reset-password" style="color: #4ABEB6;">reset your password</a> or respond to this email and we will help you get back in. Amazing job!</p>
     <p>Best Regards,<br/>Editor Team</p>
-    <i>If you would like to no longer receive these emails, you can <a href="https://www.theteenmagazine.com/email-preferences?email=<%= @user.subscribers.last.email %>&token=<%= @user.subscribers.last.token %>" style="color: #4ABEB6;">unsubscribe<a> from all lists.</i>
+    <i>If you would like to no longer receive these emails, you can <a href="https://www.theteenmagazine.com/email-preferences?email=<%= @user.subscriber.email %>&token=<%= @user.subscriber.token %>" style="color: #4ABEB6;">unsubscribe<a> from all lists.</i>
   </body>
 </html>
