--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,32 +1,36 @@
-<h1 id="page_title" style="border-bottom: none; margin-top: 0px;">Submitted Profiles</h1>
-<div id="posts_wrapper" class="index_users">
-  <div class="skinny_wrapper profiles--flex">
-    <% @users_waiting.each do |user| %>
-      <div class="flex--profile">
-        <div class="profiles">
-          <a href= "/writers/<%= user.slug %>/edit">
-            <% if user.profile.attached? %>
-              <%= image_tag(user.profile.variant(resize_to_fill: [100, 100], format: 'webp'), :class => "profile_img") %>
-            <% else %>
-              <%= image_tag("profile_image.jpg", :class => "profile_img") %>
-            <% end %>
-          </a>
-          <h6 style="margin-bottom: 5px;">
-            <% @name =
-              if (user.first_name != "" && user.first_name !=nil)
-                user.first_name
-              end
-              if (user.last_name != "" && user.last_name!= nil)
-                @name = @name + " " + user.last_name
-              end %>
-            <a href= "/writers/<%= user.slug %>/edit"><%= @name %></a>
-          </h6>
+<% if params[:email_list].nil? %>
+  <h1 id="page_title" style="border-bottom: none; margin-top: 0px;">Submitted Profiles</h1>
+  <div id="posts_wrapper" class="index_users">
+    <div class="skinny_wrapper profiles--flex">
+      <% @users_waiting.each do |user| %>
+        <div class="flex--profile">
+          <div class="profiles">
+            <a href= "/writers/<%= user.slug %>/edit">
+              <% if user.profile.attached? %>
+                <%= image_tag(user.profile.variant(resize_to_fill: [100, 100], format: 'webp'), :class => "profile_img") %>
+              <% else %>
+                <%= image_tag("profile_image.jpg", :class => "profile_img") %>
+              <% end %>
+            </a>
+            <h6 style="margin-bottom: 5px;">
+              <% @name =
+                if (user.first_name != "" && user.first_name !=nil)
+                  user.first_name
+                end
+                if (user.last_name != "" && user.last_name!= nil)
+                  @name = @name + " " + user.last_name
+                end %>
+              <a href= "/writers/<%= user.slug %>/edit"><%= @name %></a>
+            </h6>
+          </div>
         </div>
-      </div>
-    <% end %>
+      <% end %>
+    </div>
   </div>
-</div>
-<h1 id="page_title" style="margin-bottom: -20px; border-bottom: none;">Writers</h1>
+  <h1 id="page_title" style="margin-bottom: -20px; border-bottom: none;">Writers</h1>
+  <% else %>
+  <h1 id="page_title" style="margin-bottom: -20px; border-bottom: none;"><%= @category.name.capitalize %> Subscribers</h1>
+<% end %>
 <div id="posts_wrapper" class="skinny_wrapper">
   <div class="flex_horizontal">
     <%= form_for(:search, method: :get, :html => {:class => 'form-inline d-flex justify-content-left md-form form-sm active-theme-2 mt-2'}) do |f| %>
