--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -2,11 +2,17 @@
   <div class="category_image" style="background-image: url(<%= url_for(@category.image.variant(resize_to_fill: [1200, 845], format: 'webp')) %>)">
     <div class="category_name_background p-4">
       <h1><%= @category.name %></h1>
-      <% if current_user && current_user.admin? || (current_user.categories.where(slug: @category.slug).present?) %>
+      <% if current_user && (current_user.admin? || (current_user.categories.where(slug: @category.slug).present?)) %>
         <%= link_to "Category dashboard (admin only)", "/categories/#{@category.slug}/dashboard", class: "link_nrml" %>
       <% end %>
     </div>
   </div>
+  <% if params[:popular_within].present? %>
+    <div class="alert alert-info" role="alert">
+      <svg width="15px" height="15px" class="mb-1 svg-inline--fa fa-check-circle fa-w-16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path fill="currentColor" d="M64 64c0-17.7-14.3-32-32-32S0 46.3 0 64V400c0 44.2 35.8 80 80 80H480c17.7 0 32-14.3 32-32s-14.3-32-32-32H80c-8.8 0-16-7.2-16-16V64zM439 279c15.1 15.1 41 4.4 41-17V152c0-13.3-10.7-24-24-24H345.9c-21.4 0-32.1 25.9-17 41l32.4 32.4L304 258.7l-73.4-73.4c-12.5-12.5-32.8-12.5-45.3 0l-80 80c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L208 253.3l73.4 73.4c12.5 12.5 32.8 12.5 45.3 0l80-80L439 279z"/></svg>
+      Showing most popular articles published within the past <%= params[:popular_within] %> weeks.
+    </div>
+  <% end %>
   <div class="category--show">
     <div class="other--articles">
       <div class="flex">
