--- a/app/assets/stylesheets/_common.css.scss
+++ b/app/assets/stylesheets/_common.css.scss
@@ -743,14 +743,14 @@ hr {
 }
 
 #subscribe-widget {
-  background-color: whitesmoke;
+  background-color: #e4ecff;
   padding: 20px 10px;
   margin: 0 0px 20px 0px;
   border-radius: 10px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   h4 {
     font-weight: bold;
-    color: #4abeb6;
+    text-align: center;
   }
   .sub-text {
     margin: 5px 0;
@@ -772,12 +772,15 @@ hr {
       margin-top: 9px;
     }
     .newpost--new--profile {
-      width: 90px !important;
-      padding: 10px 15px;
+      width: 50px !important;
+      padding: 10px 0px;
       margin-bottom: 0px !important;
       margin-right: 0px !important;
       border-bottom-right-radius: 10px;
       border-top-right-radius: 10px;
+      background-color: #ac02de !important;
+      border-color: #e9e9e9 !important;
+      border-left: 0px !important;
     }
   }
 }
