--- a/app/views/newsletters/_form.html.erb
+++ b/app/views/newsletters/_form.html.erb
@@ -14,7 +14,7 @@
     <p class="mb-0">Action button text (use button text + comma + full url. See placeholder for example)</p>
     <%= f.text_field :action_button, placeholder: 'Join Discord, https://discord.com/' %>
   <% end %>
-  <%= f.select(:audience, ['All Writers', 'Only Editors', 'Only Interviewers', 'All Readers']) %></p>
+  <%= f.select(:audience, @audiences) %></p>
 <%= f.select(:template, ['Announcement', 'Weekly Picks']) %></p>
 <div class="btn_cntnr mb-0 pt-3 pb-3" style="float: none;">
   <div class="hide spinner-button spinner-border" role="status">
