--- a/app/views/newsletters/previews/_announcement.html.erb
+++ b/app/views/newsletters/previews/_announcement.html.erb
@@ -77,7 +77,7 @@
                       <%= markdown @newsletter.message %>
                     <p>
                       Best,<br/>
-                      Mia</p>
+                      <%= @newsletter.user.first_name %></p>
                     <% if @newsletter.action_button.present? %>
                       <a target="_blank" href="<%= @button_link %>"style="background:#20e277;text-decoration:none !important; font-weight:500; margin-top:35px; color:#fff;text-transform:uppercase; font-size:14px;padding:10px 24px;display:inline-block;border-radius:50px;"><%= @button_text %></a>
                     <% end %>
