--- a/app/views/pages/trending.html.erb
+++ b/app/views/pages/trending.html.erb
@@ -1,6 +1,6 @@
 <div class="category">
   <div class="category_image" style="background-image: url(<%= url_for(@trending.first.thumbnail) %>)">
-    <div id="background">
+    <div class="category_name_background p-4">
       <h1>trending articles</h1>
     </div>
   </div>
@@ -30,11 +30,8 @@
                     <svg width="15px" height="15px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="eye" class="svg-inline--fa fa-eye fa-w-18" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="currentColor" d="M572.52 241.4C518.29 135.59 410.93 64 288 64S57.68 135.64 3.48 241.41a32.35 32.35 0 0 0 0 29.19C57.71 376.41 165.07 448 288 448s230.32-71.64 284.52-177.41a32.35 32.35 0 0 0 0-29.19zM288 400a144 144 0 1 1 144-144 143.93 143.93 0 0 1-144 144zm0-240a95.31 95.31 0 0 0-25.31 3.79 47.85 47.85 0 0 1-66.9 66.9A95.78 95.78 0 1 0 288 160z"></path></svg> <%= format_number_category(post.post_impressions) %> views
                   </p>
                 <% end %>
-                <% if current_user && current_user.is_manager? %>
-                  <p class="date_post_preview">
-                    <svg width="15px" height="15px" aria-hidden="true" focusable="false" data-prefix="fas" data-icon="eye" class="svg-inline--fa fa-eye fa-w-18" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512"><path fill="currentColor" d="M572.52 241.4C518.29 135.59 410.93 64 288 64S57.68 135.64 3.48 241.41a32.35 32.35 0 0 0 0 29.19C57.71 376.41 165.07 448 288 448s230.32-71.64 284.52-177.41a32.35 32.35 0 0 0 0-29.19zM288 400a144 144 0 1 1 144-144 143.93 143.93 0 0 1-144 144zm0-240a95.31 95.31 0 0 0-25.31 3.79 47.85 47.85 0 0 1-66.9 66.9A95.78 95.78 0 1 0 288 160z"></path></svg> <%= post.post_impressions %> views, <%= post.trending_score.truncate(3) %> score (admin only)
-                  </p>
-                <% end %>
+                <%= render 'posts/partials/views_and_comments', post: post %>
+                <%= render "/posts/partials/admin_stats", post: post, show_priority: false %>
               </div>
             </div>
           <% end %>
