--- a/app/views/posts/partials/_side_bar_published.html.erb
+++ b/app/views/posts/partials/_side_bar_published.html.erb
@@ -10,13 +10,15 @@
           <p>Want to get featured on The Teen Magazine? Pitch your story <%= link_to 'here', '/pitch-interview', class: "link_grn" %>.</p>
         <% end %>
         <div id="subscribe-widget" style="margin-top: 20px;">
-          <h4>Subscribe to our weekly newsletter</h4>
-          <span class="sub-text">Get notified of the top trending articles once a week!</span>
+          <h3>Let us slide into your dms 🥰</h3>
+          <span class="sub-text">Get notified of top trending articles every week (we won't spam you!)</span>
           <small id="result-text"></small>
           <%= form_for(:posts, url:"/posts/#{post.id}/subscribe", remote: true, :html => {:id => "subscribe-form"}) do |f| %>
             <%= f.text_field :email, placeholder: "Your Email", required: true, id: "email", onkeyup: "isFormButtonDisabled('#email')"%>
             <div class="btn_cntnr">
-              <%= f.button "Sign Up", class: "mr-0 newpost--new--profile submit_modal", id: "submit-comment-modal-button" %>
+              <%= f.button(class: "mr-0 newpost--new--profile submit_modal", id: "submit-comment-modal-button") do %>
+                <svg width="18px" height="18px" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><!--! Font Awesome Pro 6.4.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. --><path fill="currentColor" d="M443.3 267.3c6.2-6.2 6.2-16.4 0-22.6l-176-176c-6.2-6.2-16.4-6.2-22.6 0s-6.2 16.4 0 22.6L393.4 240 16 240c-8.8 0-16 7.2-16 16s7.2 16 16 16l377.4 0L244.7 420.7c-6.2 6.2-6.2 16.4 0 22.6s16.4 6.2 22.6 0l176-176z"/></svg>
+              <% end %>
             </div>
           <% end %>
         </div>
