now any writer can contact one of the managing editors

--- a/app/views/layouts/partials/_writer-dropdown-menu.html.erb
+++ b/app/views/layouts/partials/_writer-dropdown-menu.html.erb
@@ -38,6 +38,7 @@
         <p><%= @unseen_shared_drafts_cnt %> new</p>
       <% end %>
     </a>
+    <a href="/managing-editors" class="dropdown-item">Managing Editors</a>
   <% end %>
   <% if current_user.has_newsletter_permissions %>
     <a href="/newsletters" class="dropdown-item">Newsletters</a>
