--- a/app/views/users/partials/_dashboard_articles.html.erb
+++ b/app/views/users/partials/_dashboard_articles.html.erb
@@ -4,7 +4,7 @@
       <%= image_tag image, class: "icon" %>
       <div>
         <h6 id="post-title"><a href="#"><%= link_to post.title, post%></a>
-          <% if current_user.is_manager? && (post.pitch.priority.eql? "High") %>
+          <% if current_user.is_manager? && post.pitch.present? && (post.pitch.priority.eql? "High") %>
             <span class="badge badge-pill badge-danger">
               High Priority
             </span>
