--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -100,7 +100,7 @@
     <% end %>
   </div>
 <% else %>
-  <h3 class="title m-4">This article has already been published and can only be edited by the author(s) and admins.</h3>
+  <h3 class="title m-4">This article has already been published and can only be edited by the author(s) and managing editor of this category.</h3>
 <% end %>
 <script type="text/javascript" src="https://svc.webspellchecker.net/spellcheck31/wscbundle/wscbundle.js"></script>
 <script type="text/javascript">
